--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: geocoder_buddy
 description: Forward, Reverse geocoding and Search Address without any apikey.
-version: 1.1.1
+version: 1.0.1
 homepage: https://github.com/flutterbuddy1/geocoder_buddy
 repository: https://github.com/flutterbuddy1/geocoder_buddy
 issue_tracker: https://github.com/flutterbuddy1/geocoder_buddy/issues
@@ -13,6 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.4
+  dartdoc: ^6.0.0
 
 dev_dependencies:
   flutter_test:
